// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors util initErrorReporter should init sentry 1`] = `
[
  [
    {
      "denyUrls": [
        /extensions\\\\//i,
        /\\^chrome:\\\\/\\\\//i,
        /draft-js\\\\/lib/i,
        /analytics\\\\\\.min\\\\\\.js/i,
      ],
      "dsn": "https://example.com/error",
      "enabled": true,
      "environment": "development",
      "ignoreErrors": [
        "fb_xd_fragment",
        "ResizeObserver loop completed with undelivered notifications",
        "TypeError: Failed to fetch",
        "TypeError: NetworkError when attempting to fetch resource.",
        "Error: Network Error",
        /\\^Error: timeout of \\\\d\\+ms exceeded\\$/,
        "ResizeObserver loop limit exceeded",
      ],
      "integrations": [
        BrowserTracing {
          "_createRouteTransaction": [Function],
          "name": "BrowserTracing",
          "options": {
            "finalTimeout": 30000,
            "idleTimeout": 1000,
            "markBackgroundTransactions": true,
            "routingInstrumentation": [Function],
            "startTransactionOnLocationChange": true,
            "startTransactionOnPageLoad": true,
            "traceFetch": true,
            "traceXHR": true,
            "tracingOrigins": [
              "localhost",
              /\\^\\\\//,
            ],
          },
        },
      ],
      "release": "foo",
      "tracesSampleRate": 0.001,
    },
  ],
]
`;

exports[`errors util initErrorReporter should set user when currentUser option is defined 1`] = `
[
  [
    {
      "email": "alex@gorgias.io",
      "id": "2",
      "name": "Alex Plugaru",
    },
  ],
]
`;

exports[`errors util reportError should only display error on the console in development environment 1`] = `
[
  [
    [Error: Test error],
  ],
  [
    "Error extra:",
    {
      "foo": "bar",
    },
  ],
]
`;

exports[`errors util reportError should only report error to Sentry in production environment 1`] = `
[
  [
    [Error: Test error],
    {
      "extra": {
        "foo": "bar",
      },
    },
  ],
]
`;

exports[`errors util reportError should report error to Sentry and display error on the console in staging environment 1`] = `
[
  [
    [Error: Test error],
    {
      "extra": {
        "foo": "bar",
      },
    },
  ],
]
`;

exports[`errors util reportError should report error to Sentry and display error on the console in staging environment 2`] = `
[
  [
    [Error: Test error],
  ],
  [
    "Error extra:",
    {
      "foo": "bar",
    },
  ],
]
`;
